--- a/slides/wasm.html
+++ b/slides/wasm.html
@@ -36,9 +36,54 @@
     <div class="reveal">
       <div class="slides">
         <section>
-          <h2>CAMPJS VI</h2>
-          <a href="webvr.html">WebVR</a>
-          <a href="wasm.html">WASM</a>
+          <h1>WebAssembly</h1>
+          <small>Nick Desaulniers</small>
+        </section>
+        <section>
+          <h2>What's WASM?</h2>
+          <p>A Bytecode for the web.</p>
+        </section>
+        <section>
+          <h2>Work in progress by all browser vendors</h2>
+          <a href="https://github.com/alrra/browser-logos">
+            <img src="../main-desktop.png" alt="modern browser logos"/>
+          </a>
+        </section>
+        <section>
+          <h2>In design</h2>
+          <p>Plays well with web's security model</p>
+          <p>Compressable</p>
+          <p>View source</p>
+        </section>
+        <section>
+          <h2>JavaScript</h2>
+          <p>is here to stay</p>
+        </section>
+        <section>
+          <h2>Improvement from ASM.js</h2>
+          <p>Start up time</p>
+        </section>
+        <section>
+          <h2>Encodes an AST</h2>
+          <img src="../compiler_structure.png" alt="structure of a compiler"/>
+          <p>
+            <a href="http://research.microsoft.com/pubs/120832/paper.pdf">See Also: JSZap</a>
+          </p>
+        </section>
+        <section>
+          <section>
+            <h2>Can I see some WASM?</h2>
+          </section>
+          <section>
+            <h2>Underspecification</h2>
+            <img src="../openglvswebgl.png" alt="open gl vs web gl"/>
+          </section>
+          <section>
+            <img src="../hardwaresoftware.png" alt="boundary between hardware and software"/>
+          </section>
+        </section>
+        <section>
+          <h2>Who Cleans Up Around Here?</h2>
         </section>
       </div>
     </div>
