remove some stuff

--- a/slides/webvr.html
+++ b/slides/webvr.html
@@ -40,6 +40,10 @@
           <small>Nick Desaulniers</small>
         </section>
         <section>
+          <h2>What's WebVR?</h2>
+          <p></p>
+        </section>
+        <section>
           <h2>WebGL & CSS</h2>
         </section>
         <section>
@@ -49,29 +53,24 @@
         <section>
           <h2>Draw Twice</h2>
           <p>Can be avoided with MRT or instancing.</p>
+          <p>WebGL2 and WebGL in workers.</p>
         </section>
         <section>
-          <h2>Parallax</h2>
-          <img src="../parallax.gif" alt="an example of parallax">
-          <br>
-          <small>
-            Image by <a href="https://en.wikipedia.org/wiki/File:Parallax.gif">Nathaniel Domek</a>
-          </small>
-          <p>
-            This animation is an example of parallax - as the viewpoint moves
-            side to side, the objects closer to the camera appear to move
-            faster, while the objects in the distance appear to move slower.
-          </p>
+          <h2>Refresh Rate</h2>
+          <p>60 Hz === 16.6 ms</p>
+          <p>90 Hz === 11.1 ms</p>
         </section>
         <section>
-          <h2>Camera</h2>
-          <p>First person rather than look at.</p>
+          <h2>Performance Critical</h2>
+          <p>A new carrot to chase.</p>
         </section>
         <section>
-          <h2>3D Video</h2>
-          <a href="http://elevr.com/cg-vr-1/http://elevr.com/cg-vr-1/"><img src="../camera.gif" alt="why 3d cameras are hard"/></a>
-          <br>
-          <small><a href="http://elevr.com/cg-vr-1/">eleVR</a></small>
+          <h2>HMD</h2>
+          <p>Head Mounted display provides rotational information.</p>
+        </section>
+        <section>
+          <h2>Position Sensor</h2>
+          <p>Provides translational information.</p>
         </section>
         <section>
           <h2>Demo</h2>
