--- a/slides/wasm.html
+++ b/slides/wasm.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CampJS VI</title>
+    <title>WASM</title>
     <link rel="stylesheet" href="../reveal.js-2.6.2/css/reveal.min.css"/>
     <link rel="stylesheet" href="../reveal.js-2.6.2/css/theme/fxos.css" id="theme"/>
     <link rel="stylesheet" href="../reveal.js-2.6.2/lib/css/zenburn.css"/>
