--- a/slides/webvr.html
+++ b/slides/webvr.html
@@ -112,7 +112,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-XXXX-Y', 'auto');  // Replace with your property ID.
+  ga('create', 'UA-36993986-1', 'auto');  // Replace with your property ID.
   ga('send', 'pageview');
 
     </script>
